start of testing key store

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,56 @@
 [package]
 name = "credibil-ose"
+description.workspace = true
+license.workspace = true
+readme = "README.md"
+authors.workspace = true
+categories.workspace = true
+edition.workspace = true
+exclude.workspace = true
+homepage.workspace = true
+keywords.workspace = true
+repository.workspace = true
+rust-version.workspace = true
+version.workspace = true
+
+[lib]
+# crate-type = ["cdylib", "rlib"]
+
+[lints]
+workspace = true
+
+[dependencies]
+aes-gcm = "0.10.3"
+aes-kw = { version = "0.2.1", features = ["alloc"] }
+anyhow.workspace = true
+base64ct = { version = "1.7.3", features = ["std"] }
+chacha20poly1305 = "0.10.1"
+ecdsa = "0.16.9"
+ecies.workspace = true
+ed25519-dalek.workspace = true
+k256 = "0.13.4"
+multibase = "0.9.1"
+rand.workspace = true
+serde.workspace = true
+serde_json = { version = "1.0.140", features = ["alloc"] }
+serde_repr = "0.1.20"
+tracing = "0.1.41"
+x25519-dalek.workspace = true
+zeroize = "1.8.1"
+
+[dev-dependencies]
+hex = "0.4.3"
+sha2 = "0.10.8"
+signature = "2.2.0"
+tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
+
+[workspace]
+members = [
+    "crates/*"
+]
+resolver = "3"
+
+[workspace.package]
 description = "Credibil information security utilities for signing, encryption and key management."
 license = "MIT OR Apache-2.0"
 readme = "README.md"
@@ -11,41 +62,22 @@ homepage = "https://credibil.io"
 keywords = ["credentials", "decentralized", "identity", "openid", "verifiable"]
 repository = "https://github.com/credibil/ose"
 rust-version = "1.86"
-version = "0.1.2"
+version = "0.1.0"
 
-[lib]
-# crate-type = ["cdylib", "rlib"]
-
-[lints.rust]
+[workspace.lints.rust]
 missing_docs = "warn"
 unused_extern_crates = "warn"
 
-[lints.clippy]
+[workspace.lints.clippy]
 all = "warn"
 pedantic = "warn"
 nursery = "warn"
 
-[dependencies]
-aes-gcm = "0.10.3"
-aes-kw = { version = "0.2.1", features = ["alloc"] }
+[workspace.dependencies]
 anyhow = "1.0.98"
-base64ct = { version = "1.7.3", features = ["std"] }
-chacha20poly1305 = "0.10.1"
-ecdsa = "0.16.9"
+credibil-ose = { path = "."}
 ecies = { version = "0.2.9", default-features = false, features = ["pure", "std"] }
 ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
-k256 = "0.13.4"
-multibase = "0.9.1"
 rand = "0.8.5"
 serde = { version = "1.0.219", features = ["derive"] }
-serde_json = { version = "1.0.140", features = ["alloc"] }
-serde_repr = "0.1.20"
-tracing = "0.1.41"
 x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
-zeroize = "1.8.1"
-
-[dev-dependencies]
-hex = "0.4.3"
-sha2 = "0.10.8"
-signature = "2.2.0"
-tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
