--- a/Makefile.toml
+++ b/Makefile.toml
@@ -26,7 +26,7 @@ dependencies = ["clean"]
 
 [tasks.test]
 command = "cargo"
-args = ["nextest", "run", "--no-fail-fast"]
+args = ["nextest", "run", "--all", "--no-fail-fast"]
 # dependencies = ["testdocs"]
 env = { RUSTFLAGS = "-Dwarnings" }
 
