get public keys. Basic crud tests

--- a/crates/test-kms/Cargo.toml
+++ b/crates/test-kms/Cargo.toml
@@ -24,3 +24,6 @@ multihash-codetable = { version = "0.1.4", features = ["sha2"] }
 rand.workspace = true
 serde.workspace = true
 x25519-dalek.workspace = true
+
+[dev-dependencies]
+tokio.workspace = true
