--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,9 +40,9 @@ zeroize = "1.8.1"
 
 [dev-dependencies]
 hex = "0.4.3"
-sha2 = "0.10.8"
+sha2.workspace = true
 signature = "2.2.0"
-tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
+tokio.workspace = true
 
 [workspace]
 members = [
@@ -80,4 +80,6 @@ ecies = { version = "0.2.9", default-features = false, features = ["pure", "std"
 ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
 rand = "0.8.5"
 serde = { version = "1.0.219", features = ["derive"] }
+sha2 = "0.10.8"
+tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
 x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
