--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -40,7 +40,7 @@ jobs:
           sudo apt-get update
           sudo apt-get -y install libwebkit2gtk-4.1-dev
       
-      - run: cargo nextest run
+      - run: cargo nextest run --all
 
   # windows:
   #   name: Test suite (windows)
