fix bug in derivation of x25519 from ed25519

--- a/crates/test-kms/Cargo.toml
+++ b/crates/test-kms/Cargo.toml
@@ -23,6 +23,7 @@ ed25519-dalek.workspace = true
 multihash-codetable = { version = "0.1.4", features = ["sha2"] }
 rand.workspace = true
 serde.workspace = true
+sha2.workspace = true
 x25519-dalek.workspace = true
 
 [dev-dependencies]
